# SimQC-TTN

./: .gitignore  README.md  pyproject.toml
notebooks/: example_qaoa.ipynb  example_random.ipynb
src/simqc_ttn/: cli.py
src/simqc_ttn/circuits/: circuit.py  qaoa_circs.py  rand_circ.py
src/simqc_ttn/simulation/: dmrg_compress_circ.py  linalg_utils.py  sim_qaoa_circ.py  sim_rand_circ.py
src/simqc_ttn/tree_networks/: binary_tree_netw.py  graph_ten.py  graph_ten_util.py
